syntax = "proto3";
package v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "vince/v1/events.proto";

// Defines internal node communication service.
service InternalCLuster {
  rpc Join(Join.Request) returns (Join.Response);
  rpc Load(Load.Request) returns (google.protobuf.Empty);
  rpc Backup(Backup.Request) returns (stream Backup.Response);
  rpc RemoveNode(RemoveNode.Request) returns (google.protobuf.Empty);
  rpc Notify(Notify.Request) returns (google.protobuf.Empty);
  rpc NodeAPI(NodeAPIRequest) returns (NodeMeta);

  rpc SendData(Data) returns (google.protobuf.Empty);
  rpc Realtime(Realtime.Request) returns (Realtime.Response);
  rpc Aggregate(Aggregate.Request) returns (Aggregate.Response);
  rpc Timeseries(Timeseries.Request) returns (Timeseries.Response);
  rpc BreakDown(BreakDown.Request) returns (BreakDown.Response);
}

message NodeMeta {
  string url = 1;
  uint64 commit_index = 2;
}

message Credentials {
  string username = 1;
  string password = 2;
}

message Notify {
  message Request {
    string id = 1;
    string address = 2;
  }
}

message NodeAPIRequest {}

message RemoveNode {
  message Request { string id = 1; }
}

message Load {
  message Request { bytes data = 1; }
}

message Backup {
  message Request {
    bool leader = 1;
    bool compress = 2;
  }
  message Response { bytes data = 1; }
}

message Join {
  message Request {
    string id = 1;
    string address = 2;
    bool voter = 3;
  }
  message Response { string leader = 1; }
}

message Realtime {
  message Request {
    string site_id = 1 [ (buf.validate.field).required = true ];
  }
  message Response { uint64 visitors = 1; }
}

message Aggregate {
  message Request {
    string site_id = 1 [ (buf.validate.field).required = true ];
    TimePeriod period = 3 [ (buf.validate.field).required = true ];
    repeated Metric metrics = 4 [ (buf.validate.field).required = true ];
    repeated Filter filters = 6;
    google.protobuf.Timestamp date = 7 [ (buf.validate.field).required = true ];
  }

  message Response {
    // Mappping of metric to metric value. We can't use enums as map keys that
    // is why we use string here.
    map<string, double> results = 1;
  }
}

message Timeseries {
  message Request {
    string site_id = 1 [ (buf.validate.field).required = true ];
    string tenant_id = 2 [ (buf.validate.field).required = true ];
    TimePeriod period = 3 [ (buf.validate.field).required = true ];
    repeated Metric metrics = 4 [ (buf.validate.field).required = true ];
    Interval interval = 5;
    repeated Filter filters = 6;
    google.protobuf.Timestamp date = 7 [ (buf.validate.field).required = true ];
  }

  message Response { repeated Bucket results = 1; }

  message Bucket {
    google.protobuf.Timestamp timestamp = 1;
    map<string, double> values = 2;
  }
}

message BreakDown {
  message Request {
    string site_id = 1 [ (buf.validate.field).required = true ];
    string tenant_id = 2 [ (buf.validate.field).required = true ];
    repeated Property property = 3 [ (buf.validate.field).required = true ];
    TimePeriod period = 4 [ (buf.validate.field).required = true ];
    repeated Metric metrics = 5 [ (buf.validate.field).required = true ];
    repeated Filter filters = 6;
    google.protobuf.Timestamp date = 7 [ (buf.validate.field).required = true ];
  }

  message Response { repeated Result results = 1; }

  message Result {
    Property property = 1;
    repeated KeyValues values = 2;
  }
  message KeyValues {
    string key = 1;
    map<string, double> value = 2;
  }
}

enum Interval {
  date = 0;
  minute = 1;
  hour = 2;
  week = 3;
  month = 4;
}

enum Metric {
  unknown_metric = 0;
  visitors = 1;
  visits = 2;
  pageviews = 3;
  views_per_visit = 4;
  bounce_rate = 5;
  visit_duration = 6;
  events = 7;
}

message TimePeriod {
  oneof value {
    Base base = 1;
    Custom custom = 2;
  }

  enum Base {
    day = 0;
    _7d = 1;
    _30d = 3;
    mo = 4;
    _6mo = 5;
    _12mo = 6;
    year = 7;
  }
  message Custom {
    google.protobuf.Timestamp start = 1;
    google.protobuf.Timestamp end = 2;
  }
}

enum Property {
  event = 0;
  browser = 7;
  browser_version = 8;
  city = 9;
  country = 10;
  device = 11;
  domain = 12;
  entry_page = 13;
  exit_page = 15;
  host = 16;
  os = 17;
  os_version = 18;
  page = 19;
  referrer = 20;
  region = 21;
  source = 22;
  utm_campaign = 24;
  utm_content = 25;
  utm_medium = 26;
  utm_source = 27;
  utm_term = 28;
}

message Filters {
  repeated Filter list = 1;
  // columns returned
  repeated Projection projection = 2;

  enum Projection {
    unknown = 0;
    timestamp = 1;
    id = 2;
    bounce = 3;
    session = 4;
    view = 5;
    duration = 6;

    browser = 7;
    browser_version = 8;
    city = 9;
    country = 10;
    device = 11;
    domain = 12;
    entry_page = 13;
    event = 14;
    exit_page = 15;
    host = 16;
    os = 17;
    os_version = 18;
    page = 19;
    referrer = 20;
    region = 21;
    source = 22;
    utm_campaign = 24;
    utm_content = 25;
    utm_medium = 26;
    utm_source = 27;
    utm_term = 28;
  }
}

message Filter {
  Property property = 1;
  OP op = 2;
  string value = 3;

  enum OP {
    equal = 0;
    not_equal = 1;
    re_equal = 2;
    re_not_equal = 3;
  }
}

message Event {
  /// EventName
  string n = 1 [ (buf.validate.field).required = true ];
  string u = 2 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.uri = true
  ];
  // Domain
  string d = 3 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.hostname = true
  ];
  // Screen width
  int32 w = 4;
  // Hash mode
  bool h = 5;
  string ip = 6;
  // user agent
  string ua = 7;

  // Referrer
  string r = 8;

  google.protobuf.Timestamp timestamp = 9;
}

message Error { string error = 1; }